test_suite/ERROR_neg_index.out
A.test: 0
ERROR_neg_index.java: 11:  Semantic Error: Index with constant value: -1 is out of bounds (negative)
